add user cmd and swag config
